# plex-poster-healer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: publish-docker.yml
src/plex_poster_healer/: cli.py  config.py  healer.py  image_checks.py  models.py  plex_client.py  reporting.py
src/plex_poster_healer/providers/: __init__.py  base.py  imdb.py  local_assets.py  plex_metadata.py  tmdb.py  tvdb.py
tests/: test_image_checks.py  test_providers.py
tests/fixtures/: good_poster.ppm
